2005-07-06  Alain Magloire
	PR 102619: Performance improvement patch from: Robert O'Callahan
	* src/org/eclipse/cdt/ui/CElementContentProvider.java

2005-07-05  Alain Magloire
	Fix for PR 102327: ContentType framework.
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2005-06-29 Alain Magloire
	Fix PR 102159: NPE in the referencesSearchGroup: fillcontextMenu.
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/search/actions/ReferencesSearchGroup.java

2005-06-25 Alain Magloire
	Fix PR 98458: extra semicolon in namespace wizard class.
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java

2005-06-25 Alain Magloire
	Fix for PR 98788: Templates
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementImageProvider.java

2005-06-22 Alain Magloire
	Fix PR 99668 from Craig Watson.
	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java

2005-06-22 Alain Magloire
	Fix PR 100263 from Devin.
	* src/org/eclipse/cdt/internal/ui/preferences/PrefrencesMessages.properties

2005-06-08 Alain Magloire
	Fix PR 98846
	* src/org/eclipse/cdt/internal/ui/util/ResourceTOItemsMapper.java

2005-06-08 Alain Magloire
	Move to the IContentTypeManager framework: PR 86645
	* src/org/eclipse/cdt/internal/ui/CFileElementWorkingCopy.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	+ src/org/eclipse/cdt/internal/ui/preferences/CFileTypeAssociation.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypeDialog.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
	* src/org/eclipse/cdt/internal/ui/text/CFormattingStrategy.java